--- a/Android-Application/AndroidManifest.xml
+++ b/Android-Application/AndroidManifest.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.fernferret.android.fortywinks"
-      android:versionCode="1"
-      android:versionName="1.0">
-
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".FortyWinks"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-    </application>
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	package="com.fernferret.android.fortywinks"
+	android:versionCode="1"
+	android:versionName="1.0">
+	<application
+		android:icon="@drawable/icon"
+		android:label="@string/app_name">
+		<activity
+			android:name=".FortyWinks"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action
+					android:name="android.intent.action.MAIN"/>
+				<category
+					android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity
+			android:name=".WakeUpAlert"
+			android:label="Get Up Now"/>
+		<activity
+			android:name=".EditAlarm"
+			android:label="Add or Edit an Alarm"/>
+		<activity
+			android:name=".ListAlarms"
+			android:label="View your Alarms"/>
+		<receiver
+			android:name=".SingleAlarm"
+			android:process=":remote"/>
+		<receiver
+			android:name=".MultiAlarm"
+			android:process=":remote"/>
+	</application>
+	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+	<uses-permission android:name="android.permission.DISABLE_KEYGUARD"></uses-permission>
 </manifest>
