--- a/Android-Application/AndroidManifest.xml
+++ b/Android-Application/AndroidManifest.xml
@@ -9,7 +9,8 @@
 		android:label="@string/app_name">
 		<activity
 			android:name=".FortyWinks"
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:configChanges="orientation">
 			<intent-filter>
 				<action
 					android:name="android.intent.action.MAIN"/>
@@ -19,14 +20,17 @@
 		</activity>
 		<activity
 			android:name=".WakeUpAlert"
-			android:label="@string/activity_title_open_alarm"/>
+			android:label="@string/activity_title_open_alarm"
+			android:configChanges="orientation"/>
 		<activity
 			android:name=".EditAlarm"
-			android:label="@string/activity_title_edit_alarm"/>
+			android:label="@string/activity_title_edit_alarm"
+			android:configChanges="orientation"/>
 		<activity
 			android:name=".ListAlarms"
-			android:label="@string/activity_title_view_alarms"/>
-			<activity
+			android:label="@string/activity_title_view_alarms"
+			android:configChanges="orientation"/>
+		<activity
 			android:name=".FortyPrefs"
 			android:label="@string/preferences"/>
 		<receiver
@@ -36,6 +40,8 @@
 			android:name=".MultiAlarm"
 			android:process=":remote"/>
 	</application>
-	<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-	<uses-permission android:name="android.permission.DISABLE_KEYGUARD"></uses-permission>
+	<uses-permission
+		android:name="android.permission.WAKE_LOCK"></uses-permission>
+	<uses-permission
+		android:name="android.permission.DISABLE_KEYGUARD"></uses-permission>
 </manifest>
