--- a/Android-Application/AndroidManifest.xml
+++ b/Android-Application/AndroidManifest.xml
@@ -10,7 +10,8 @@
 		<activity
 			android:name=".FortyWinks"
 			android:label="@string/app_name"
-			android:configChanges="orientation">
+			android:configChanges="orientation"
+			android:screenOrientation="portrait">
 			<intent-filter>
 				<action
 					android:name="android.intent.action.MAIN"/>
